[package]
name = "async_echo_server"
version = "0.1.0"
authors = ["Evan <EvanLDouglass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.3"
tokio = {version = "0.2.13", features = ["full"] }

[dev-dependencies]
failure = "0.1.7"
reqwest = "0.10.4"
