[package]
name = "backend"
version = "0.1.0"
authors = ["Evan <EvanLDouglass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mytodo = { path = ".." }
diesel = { version = "1.0.0", features = ["sqlite"]}
rocket = "0.4.4"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json", "diesel_sqlite_pool"]