[package]
name = "frontend"
version = "0.1.0"
authors = ["Evan <EvanLDouglass@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mytodo = {path = ".."}
futures = "0.3"
seed = "0.6"
wasm-bindgen = "0.2"
web-sys = "0.3"